--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -332,5 +332,9 @@
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
+<!-- <app-upload-file/>
+<app-convert-pdf/> -->
 
 <router-outlet />
+
+{{ env.apiUrl }}
