--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -332,8 +332,8 @@
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<!-- <app-upload-file/>
-<app-convert-pdf/> -->
+<app-upload-file/>
+<!-- <app-convert-pdf/> -->
 
 <router-outlet />
 
