sort upload component

--- a/src/app/features/files/components/upload-file/upload-file.component.html
+++ b/src/app/features/files/components/upload-file/upload-file.component.html
@@ -1,4 +1,4 @@
- <p>{{clean | async}}</p>
+ <p>{{fileUploadRef | async}}</p>
 
 <form #uploadForm>
     <input type="file" required (change)="onFileChange($event)"/>
