--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,4 @@
 <!--This is to avoid reload during acquireTokenSilent() because of hidden iframe -->
 <router-outlet *ngIf="!msal.isIframe"/>
 
-<div class="toast-wrapper" [class.active]="activeNotice">
-  <app-toast *ngIf="activeNotice" [notice]="activeNotice"/>
-</div>
+<app-toast [activeNotice]="activeNotice" (close)="onToastClose()"/>
