--- a/src/notices/toast/toast.component.html
+++ b/src/notices/toast/toast.component.html
@@ -1,7 +1,12 @@
 <div class="wrapper" [class.active]="activeNotice">
   <div class="toast" *ngIf="activeNotice">
-    <span class="close" (click)="emitClose()">&times;</span>
-    <h2>{{activeNotice.title}}</h2>
-    <p>{{activeNotice.text}}</p>
+    <div class="header">
+      <span class="level" [attr.data-level]="activeNotice.level"></span>
+      <h1>{{activeNotice.title}}</h1>  
+      <span class="close" (click)="emitClose()">&times;</span>
+    </div>
+    <div class="body">
+      <p>{{activeNotice.text}}</p>
+    </div>
   </div>
 </div>
