--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,50 @@
 :root {
-  --white: #ffffff;
+  --bg: #ffffff;
+  --text-color: #343434;
+  --hilite: #dddddd;
   --space: 0.5rem;
 }
 
-a:not(:hover) {
-  text-decoration: none;
+html {
+  font-family: 'Titillium Web', sans-serif;
+  font-size: 16px;
+  background-color: var(--bg);
+  color: var(--text-color);
+  transition: background-color .3s, color .3s;
+
+  &.dark-mode {
+    --bg: #343434;
+    --text-color: #ffffff;
+    --hilite: #999999;
+  }
 }
 
-h1, h2, h3, h4, p {
+h1, h2, h3, h4, h5, h6, p, ul {
   margin: 0;
+}
+
+p:not(:first-of-type) {
+  margin-top: var(--space);
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+
+  &:hover {
+    background-color: var(--hilite);
+  }
+}
+
+input, select, textarea, button, .btn {
+  font-family: inherit;
+  cursor: pointer;
+  color: inherit;
+  background-color: transparent;
+  border: 1px solid var(--text-color);
+  border-radius: var(--space);
+
+  &:hover {
+    background-color: var(--hilite);
+  }
 }
