Support file list

--- a/src/documents/documents.component.html
+++ b/src/documents/documents.component.html
@@ -6,3 +6,14 @@
     <input type="file" required (change)="onFileChange($event)"/>
     <input *ngIf="file" type="button" (click)="submit()" value="Upload!"/>
 </form>
+
+<div *ngIf="(blobs$ | async) ?? [] as blobs" class="docs-table">
+    <div *ngFor="let blob of blobs" [attr.data-blob-id]="blob.blobReference">
+        <div class="name">{{ blob.fileName }}</div>
+        <div class="size">{{ blob.fileSize / 1024 | number: '1.0-1' }}kb</div>
+        <div class="link"><span (click)="download(blob.blobReference)">&#x2B73;</span></div>
+    </div>
+    <div *ngIf="!blobs.length">
+        No documents found!
+    </div>
+</div>
