--- a/src/documents/documents.component.scss
+++ b/src/documents/documents.component.scss
@@ -1,10 +1,20 @@
 .docs-table {
+    margin-top: 2rem;
+    max-width: 800px;
 
     > div {
         display: flex;
 
+        &:is(.header) {
+            font-weight: bold;
+        }
+
         &:nth-child(2n) {
             background-color: #efefef;
+        }
+
+        &:nth-child(2n + 1) {
+            background-color: #dedede;
         }
 
         > div.name {
@@ -16,10 +26,12 @@
         }
 
         > div.link {
-            text-align: center;
-            flex: 25px 0 0;
-            cursor: pointer;
-            color: blue;
+            flex: 50px 0 0;
+
+            &:is(.body > div) {
+                cursor: pointer;
+                color: blue;
+            }
         }
     }
 }
