--- a/src/documents/documents.component.html
+++ b/src/documents/documents.component.html
@@ -10,13 +10,16 @@
 <div *ngIf="(blobs$ | async) ?? [] as blobs" class="docs-table">
     <div class="header">
         <div class="name">File Name</div>
-        <div class="size">File Size</div>
-        <div class="link">Download</div>
+        <div class="size">Size</div>
+        <div class="link"></div>
     </div>
     <div class="body" *ngFor="let blob of blobs" [attr.data-blob-id]="blob.blobReference">
         <div class="name">{{ blob.fileName }}</div>
         <div class="size">{{ blob.fileSize / 1024 | number: '1.0-1' }}kb</div>
-        <div class="link"><span (click)="download(blob.blobReference)">&#x2B73;</span></div>
+        <div class="link">
+            <span class="download" (click)="download(blob.blobReference)">&#x2B73;</span>
+            <span class="delete" (click)="deleteBlob(blob.blobReference)">&times;</span>
+        </div>
     </div>
     <div *ngIf="!blobs.length">
         No documents found!
