--- a/src/documents/documents.component.html
+++ b/src/documents/documents.component.html
@@ -21,7 +21,10 @@
             <span class="delete" (click)="deleteBlob(blob.reference)">&times;</span>
         </div>
     </div>
-    <div *ngIf="!blobsPage.data.length">
+    <div class="body" *ngIf="!blobsPage.data.length">
         No documents found!
+    </div>
+    <div class="footer">
+        <app-upload (selected)="onUploadSelected($event)"/>
     </div>
 </div>
