further style tweaks

--- a/src/controls/toast/toast.component.scss
+++ b/src/controls/toast/toast.component.scss
@@ -52,5 +52,16 @@
 
   .body {
     font-size: 0.8rem;
+
+    p {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -moz-box;
+      display: -webkit-box;
+      -moz-box-orient: vertical;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 3;
+      line-clamp: 3;
+    }
   }
 }
